--- a/app/src/main/res/layout/fragment_calenderviewer.xml
+++ b/app/src/main/res/layout/fragment_calenderviewer.xml
@@ -7,14 +7,25 @@
     android:orientation="vertical"
     tools:context=".view.calenderviewer">
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager2"
+<!--    <androidx.viewpager2.widget.ViewPager2-->
+<!--        android:id="@+id/viewPager2"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.0"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+    <com.kizitonwose.calendar.view.CalendarView
+        android:id="@+id/calenderviewer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:cv_dayViewResource="@layout/calendar_day_layout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
